infrastructure/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: os-dev-app
  name: os-dev-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: os-dev-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: os-dev-app
  name: os-dev-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: os-dev-app
  template:
    metadata:
      labels:
        app: os-dev-app
    spec:
      containers:
        - env:
            - name: VITE_API_BASE_URL
              value: https://api.dev.openskool.dev
          image: registry.digitalocean.com/openskool/os-app:latest
          name: os-app
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: http
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: http
