infrastructure/auth.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: os-dev-auth
  name: os-dev-auth
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: os-dev-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: os-dev-auth
  name: os-dev-auth
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: os-dev-auth
  template:
    metadata:
      labels:
        app: os-dev-auth
    spec:
      containers:
        - env:
            - name: KC_DB_SCHEMA
              value: public
            - name: KC_HOSTNAME
              value: auth.dev.openskool.dev
            - name: KC_HTTP_ENABLED
              value: 'true'
            - name: KC_PROXY
              value: edge
          image: registry.digitalocean.com/openskool/os-auth:19.0.1
          # imagePullPolicy: Always # Uncomment to re-release the same tag
          name: keycloak
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health/live
              port: http
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /health/ready
              port: http
