infrastructure/cache.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: os-dev-cache
  name: os-dev-cache
spec:
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: os-dev-cache
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: os-dev-cache
spec:
  selector:
    matchLabels:
      app: os-dev-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: os-dev-cache
    spec:
      containers:
        - image: redis:7.0.4-alpine
          name: redis
          ports:
            - containerPort: 6379
