infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 'auth.dev.openskool.dev'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: os-dev-auth
                port:
                  number: 80
    - host: 'echo.dev.openskool.dev'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: echo
                port:
                  number: 80
    - host: 'hello.dev.openskool.dev'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: hello
                port:
                  number: 80
  tls:
    - hosts:
        - auth.dev.openskool.dev
        - echo.dev.openskool.dev
        - hello.dev.openskool.dev
      secretName: os-tls
